// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Правильно отрендерится с trucksCategory=LCV 1`] = `
<span
  className="RadioGroup RadioGroup_type_button RadioGroup_size_m ButtonGroup ButtonGroup_equal_width"
>
  <Radio
    checked={true}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-0"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="-1000"
  >
    до 1 т.
  </Radio>
  <Radio
    checked={false}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-1"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="1000-1500"
  >
    1-1,5 т.
  </Radio>
  <Radio
    checked={false}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-2"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="1500-"
  >
    от 1,5 т.
  </Radio>
</span>
`;

exports[`Правильно отрендерится с trucksCategory=TRUCK 1`] = `
<span
  className="RadioGroup RadioGroup_type_button RadioGroup_size_m ButtonGroup ButtonGroup_equal_width"
>
  <Radio
    checked={true}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-0"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="-3500"
  >
    до 3,5 т.
  </Radio>
  <Radio
    checked={false}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-1"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="3500-12000"
  >
    3,5-12 т.
  </Radio>
  <Radio
    checked={false}
    color="whiteHoverBlue"
    disabled={false}
    key=".$radio-2"
    mode="radio-check"
    onCheck={[Function]}
    size="m"
    type="button"
    value="12000-"
  >
    от 12 т.
  </Radio>
</span>
`;
